entregable/environment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
  namespace: angular-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
        - name: angular-app
          image: escobarjsa/samtel-prueba:latest
          ports:
            - containerPort: 80
